--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node dist/server.js",
     "ngrok": "gulp ngrok-serve --debug",
+    "patchAndRun": "npm version patch; npm run ngrok;",
     "build": "gulp build",
     "manifest": "gulp manifest",
     "debug": "gulp serve --debug",
