--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@microsoft/microsoft-graph-client": "3.0.5",
     "@microsoft/microsoft-graph-types": "2.26.0",
     "@microsoft/teams-js": "^2.0.0",
+    "adaptive-expressions": "4.19.2",
+    "adaptivecards-templating": "2.3.1",
     "axios": "^0.27.2",
     "botbuilder": "~4.16.0",
     "botbuilder-dialogs": "~4.16.0",
